mengubah ukuran bg

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="profil">
                 <h1 class="display-4">Hello</h1>
                 <p class="lead">Saya Seorang Sarjana Komputer jurusan Teknik Informatika dengan gelar profesi Microsoft Office Specialist.lulus dengan Indeks Prestasi Kumulatif (IPK): 3,33 Predikat sangat memuaskan dan Transkrip Aktivitas Kemahasiswa (TAK) : 353 Poin Predikat Sangat Baik. </p>
-                <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+                <!-- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
               </div>
         </div>
         </div>
